--- a/pepeizqs deals web/Pages/Componentes/Secciones/Publisher.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Publisher.razor
@@ -211,7 +211,7 @@ else
 											fondoColor = "var(--fondoBien)";
 										}
 
-										if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, juego, Juegos.JuegoDRM.Steam, true) == true)
+										if (Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego, Juegos.JuegoDRM.Steam, true) == true)
 										{
 											fondoColor = "var(--fondoAlerta)";
 										}
