--- a/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/NotificacionesCorreo.razor
@@ -111,7 +111,7 @@
 	private string estadoSuscripciones = null;
 	private string estadoOtros = null;
 
-	protected override async void OnInitialized()
+	protected override async Task OnInitializedAsync()
 	{
 		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
 
