--- a/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/PatreonTienda.razor
@@ -88,7 +88,7 @@
 										}
 										else
 										{
-											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, juego, recompensaJuego.DRM);
+											usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario?.SteamWishlist, usuario?.Wishlist, usuario?.GogWishlist, juego, recompensaJuego.DRM);
 
 											if (usuarioTieneDeseado == true)
 											{
